# friends

./: LICENSE  README.md
web/: Pipfile  manage.py  pyproject.toml
web/src/: main.py  sample.py
