[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = [
    "Ronnie Smith <miniscruff@hey.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.79.0"
uvicorn = {extras = ["standard"], version = "0.18.2"}

[tool.poetry.dev-dependencies]
pytest = "5.2"
black = "22.6.0"

[tool.poetry.scripts]
lint = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
